# SchemaPin

./: .gitignore  .npmrc.template  .pypirc.template  .schemapin.sig  CHANGELOG.md  CODE_OF_CONDUCT.md  GO_IMPLEMENTATION_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  SCHEMAPIN_ENHANCEMENT_PLAN.md  SECURITY.md  SKILL.md  SKILLS.md  TECHNICAL_SPECIFICATION.md  context7.json  schemapin_mcp_demo.ipynb  zensical.toml
.github/workflows/: README.md  docs.yml  release-combined.yml  release-crates.yml  release-go.yml  release-npm.yml  release-pypi.yml
docs/: a2a-context.md  api-reference.md  deployment.md  dns-txt.md  getting-started.md  index.md  revocation.md  schema-version-binding.md  signature-expiration.md  skill-signing.md  troubleshooting.md  trust-bundle-distribution.md  trust-bundles.md
go/: .gitignore  Makefile  README.md  demo_signed.json  go.mod  go.sum  schemapin.json  schemapin_private.pem  schemapin_public.pem
go/pkg/: integration_test.go
go/tests/: integration_test.go
integration_demo/: README.md  cross_language_test.py  demo_scenario.js  demo_scenario.py  demo_scenario_go.py  package.json
integration_demo/sample_schemas/: api_endpoint.json  complex_nested.json  mcp_tool.json
javascript/: .eslintrc.cjs  .npmignore  README.md  demo_private_key.pem  demo_schema_signed.json  demo_well_known.json  eslint.config.js  package-lock.json  package.json
javascript/examples/: client.js  developer.js  interactive-pinning-demo.js
javascript/src/: a2a.js  bundle.js  core.js  crypto.js  discovery.js  dns.js  index.js  interactive.js  pinning.js  resolver.js  revocation.js  skill.js  utils.js  verification.js
javascript/tests/: a2a.test.js  bundle-distribution.test.js  bundle.test.js  core.test.js  cross-compatibility.test.js  crypto.test.js  dns.test.js  interactive.test.js  resolver.test.js  revocation.test.js  skill.test.js  standalone-revocation.test.js  verification.test.js
python/: CHANGELOG.md  README.md  TECHNICAL_SPECIFICATION.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/examples/: client_verification.py  demo_private_key.pem  demo_schema_signed.json  demo_well_known.json  tool_developer.py
python/schemapin/: __init__.py  a2a.py  bundle.py  bundle_distribution.py  core.py  crypto.py  discovery.py  dns.py  pinning.py  resolver.py  revocation.py  skill.py  utils.py  verification.py
python/tests/: test_a2a.py  test_bundle.py  test_bundle_distribution.py  test_cli_tools.py  test_core.py  test_crypto.py  test_dns.py  test_resolver.py  test_revocation.py  test_skill.py  (+2 more)
rust/: Cargo.toml  README.md
rust/src/: bundle.rs  canonicalize.rs  core.rs  crypto.rs  discovery.rs  dns.rs  error.rs  lib.rs  main.rs  pinning.rs  resolver.rs  revocation.rs  skill.rs  verification.rs
rust/src/types/: a2a.rs  bundle.rs  discovery.rs  mod.rs  pinning.rs  revocation.rs
rust/tests/: cross_language_bundle.rs
scripts/: build_packages.py  publish_javascript.sh  publish_python.py  test_packages.py
server/: Dockerfile  README.md  config.json  requirements.txt  well_known_server.py
(+49 files in other folders)
