[package]
name = "schemapin"
version = "1.2.0"
edition = "2021"
rust-version = "1.70"
description = "Cryptographic schema integrity verification for AI tools - Rust implementation"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thirdkeyai/schemapin"
repository = "https://github.com/thirdkeyai/schemapin"
documentation = "https://docs.rs/schemapin"
keywords = ["cryptography", "schema", "verification", "ecdsa", "security"]
categories = ["cryptography", "authentication", "development-tools"]
authors = ["ThirdKey <contact@thirdkey.ai>", "Jascha Wanger <jascha@thirdkey.ai>"]

[features]
default = []
fetch = ["reqwest", "tokio", "async-trait"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Optional dependencies for HTTP fetching
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
